# stock_market

./: .gitignore  README.md  pyproject.toml  setup.cfg
scripts/: README.md  adjusted_cost_basis.py  dip_finder.py  dividends.py  nexo_interests.py  options.py  tally.py  wheel_profits.py
src/stock_market/config/: settings.py
src/stock_market/financial/: metrics.py
src/stock_market/plotting/: plot.py
src/stock_market/read/: csv_dir.py  ibkr.py  options.py  tasty.py
src/stock_market/tally/: __init__.py  polars.py  tally_table.py
src/stock_market/tally/tests/: test_tally_table.py
src/stock_market/utils/: __init__.py  new_ticker.py  polars_settings.py  utils.py
src/stock_market/utils/tests/: test_utils.py
tests/tally/: test_tally_table.py
tests/tally/data/: test_data1.csv
tests/utils/: test_utils.py
wheel_profits/: README.md  adjusted_cost_basis.py  read_csv_dir.py  read_excel.py  tally_table.py  utils.py  wheel_profits.py
wheel_profits/read/: csv_dir.py
wheel_profits/tally/: tally_table.py
wheel_profits/utils/: new_ticker.py
