[project]
name = "stock-market"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tino Michael", email = "" }
]
dependencies = [
    "polars>=1.11.0",
    "seaborn>=0.13.2",
    "pyqt6>=6.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stock_market"]
