[project]
name = "stock-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tino Michael", email = "" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "polars>=1.34.0",
    "pyqt6>=6.9.1",
    "seaborn>=0.13.2",
]

[project.scripts]
stock-market = "stock_market:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
