[metadata]
name = stock_market


[options]
package_dir=
    =src
packages=find:
scripts=
    scripts/adjusted_cost_basis.py
    scripts/dividends.py
    scripts/wheel_profits.py
    scripts/nexo_interests.py

install_requires=
    pandas
    numpy

python_requires= >=3.8

[options.packages.find]
where=src
